Player Movement works

--- a/Bomberman/Bomberman/Bomberman.vcxproj
+++ b/Bomberman/Bomberman/Bomberman.vcxproj
@@ -124,18 +124,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AnimatedSprite.cpp" />
-    <ClCompile Include="AnimatedSprite.hpp" />
     <ClCompile Include="Animation.cpp" />
-    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Movable.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnimatedSprite.hpp" />
     <ClInclude Include="Animation.hpp" />
     <ClInclude Include="Block.h" />
     <ClInclude Include="Dimensions.h" />
-    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Movable.h" />
     <ClInclude Include="Player.h" />
