2 Players works corretly, endgame, intro works

--- a/Bomberman/Bomberman/Bomberman.vcxproj
+++ b/Bomberman/Bomberman/Bomberman.vcxproj
@@ -128,11 +128,13 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="Fire.cpp" />
+    <ClCompile Include="HardBlock.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Movable.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Position.cpp" />
+    <ClCompile Include="SoftBlock.cpp" />
     <ClCompile Include="UiManager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -141,10 +143,12 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="Fire.h" />
+    <ClInclude Include="HardBlock.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Movable.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Position.h" />
+    <ClInclude Include="SoftBlock.h" />
     <ClInclude Include="UiManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
